Added GitHub Link
open source coding for project added for week 6 homework assignment

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         </div>
       </div>
     </div>
+    <a href="https://github.com/abecker5212020/Weather-App-She-Codes"> Open Source Code By Amie Becker</a>
     <script src="SRC/index.js"></script>
   </body>
 </html>
